--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rarecyte",
+  "name": "nasa-images",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "date-fns": "^2.11.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
   },
